# GeoAI

./: .gitignore  Codigo_Tesellation.ipynb  Data_Augmentation.ipynb  Number_of_examples.ipynb  README.md  Tesellation_Code.ipynb  pyproject.toml  separated-nn.ipynb
