[tool.poetry]
name = "GeoAI Vegetation Encroachment"
version = "0.0.0"
description = "Repo for the dectection of Vegetation Encroachment in power line corridors"
authors = ["macanoso <macanoso@unal.edu.co>"]
readme = "README.md"
packages = [{include = "version 0"}]

[tool.poetry.dependencies]
python = ">=3.8"
pillow = "^9.4.0"
tifffile = "^2023.2.28"
imagecodecs = "^2023.1.23"
opencv-python = "^4.7.0.72"
scikit-image = "^0.20.0"
rioxarray = "^0.13.4"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
virtualenvs-in-project = true
